# research-assistant

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cookiecutter.json  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: setup-respository.yml
.jenkins_flows/: main_pr
app/: 01_✨_Research_Assistant.py  01_📖_Research_collection.py  01_🧠_Knowledge_collection.py  01_🧠_Research_collection.py
app/pages/: 02_⭐_Topic_models.py  02_💬_Topic_models.py  03_🔎_Explore_collections.py
app/utils/: llm.py  prompts.py  topic_model.py  ui.py  utils.py  vector_database.py
docs/: design_doc.md  index.md
docs/api_reference/: constants.md  decorators.md  errors.md  model.md  warnings.md
docs/api_reference/utils/: utils.md
profiling/: __init__.py  confprofiling.py  researchResearch-assistant_profiling.py
researchResearch-assistant/: constants.py  decorators.py  errors.py  model.py  warnings.py
researchResearch-assistant/utils/: __init__.py
tests/: test_researchResearch-assistant.py
{{cookiecutter.package.lower()}}-{{cookiecutter.module_name}}/: Makefile  README.md  build.py  mkdocs.yml  pyproject.toml
{{cookiecutter.package.lower()}}-{{cookiecutter.module_name}}/.jenkins_flows/: code_quality_pr  main_pr
{{cookiecutter.package.lower()}}-{{cookiecutter.module_name}}/app/: 01_✨_Model_App.py
{{cookiecutter.package.lower()}}-{{cookiecutter.module_name}}/docs/: design_doc.md  examples.md  index.md  profiler.md
{{cookiecutter.package.lower()}}-{{cookiecutter.module_name}}/docs/api_reference/: constants.md  decorators.md  errors.md  model.md  warnings.md
{{cookiecutter.package.lower()}}-{{cookiecutter.module_name}}/docs/api_reference/utils/: utils.md
{{cookiecutter.package.lower()}}-{{cookiecutter.module_name}}/docs/css/: extra.css
{{cookiecutter.package.lower()}}-{{cookiecutter.module_name}}/profiling/: __init__.py  {{cookiecutter.package.lower()}}{{cookiecutter.module_name.capitalize()}}_profiling.py
{{cookiecutter.package.lower()}}-{{cookiecutter.module_name}}/tests/: conftest.py  test_{{cookiecutter.package.lower()}}{{cookiecutter.module_name.capitalize()}}.py
{{cookiecutter.package.lower()}}-{{cookiecutter.module_name}}/{{cookiecutter.package.lower()}}{{cookiecutter.module_name.capitalize()}}/: __init__.py  constants.py  decorators.py  errors.py  model.py  warnings.py
{{cookiecutter.package.lower()}}-{{cookiecutter.module_name}}/{{cookiecutter.package.lower()}}{{cookiecutter.module_name.capitalize()}}/utils/: __init__.py
