[tool.poetry]
name = "analysisTemplate"
version = "0.1.0"
description = "Template for AperVox analysis modules"
authors = ["{{cookiecutter.authors.capitalize()}}"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<3.11"
pydantic = "1.8.2"
streamlit = "1.25.0"
jupyterlab = "4.0.5"
langchain = "0.0.264"
sentence-transformers = "2.2.2"

[tool.poetry.dev-dependencies]
black = "22.1.0"
click = "8.0.2"
coverage = "5.3"
flake8 = "3.8.4"
flake8-isort = "4.0.0"
flake8-docstrings = "1.5.0"
isort = "5.8.0"
Jinja2 = "3.0.3"
mike = "1.1.2"
mkdocs = "1.2.3"
mkdocs-material = "7.3.6"
mkdocstrings = "0.19"
mkdocstrings-python = "0.7.1"
pre-commit = "2.9.2"
psutil = "5.8.0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
default_section = "THIRDPARTY"
known_third_party = []
known_first_party = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
